2015-04-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.2.

2015-04-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 5.0.1 release.

	* CHANGES: Updated.

2015-03-31  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_init_hostinfos_vhosts, attack_init_hostinfos)
	(attack_start, attack_network), src/nasl_plugins.c (nasl_plugin_add)
	(nasl_plugin_launch, nasl_thread), src/ntp.c (files_add_translation)
	(files_add_size_translation), src/openvassd.c (scanner_thread)
	(main_loop), src/pluginload.c (plugin_set_socket), src/plugs_req.c
	(requirements_common_ports), src/utils.c (list2arglist): Adjust
	arg_add_value() and arg_set_value() calls.

2015-03-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (scanner_thread): Use getpeername() to get socket's
	client address.
	(main_loop): Don't set family and client_address in globals.

2015-03-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Improve code style and remove useless
	extra allocation.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (init_host_kb, attack_host, attack_start)
	(attack_network), src/comm.c (comm_wait_order), src/nasl_plugins.c
	(nasl_thread), src/ntp.c (ntp_parse_input, ntp_recv_file),
	src/openvassd.c (handle_client, scanner_thread) , src/pluginload.c
	(plugin_get_socket): Use arg_get_value_int().

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (is_client_present): New function.
	(comm_terminate): Wait for client to acknowledge termination.

	* src/openvassd.c (handle_client): Remove ntp_keep_communication_alive
	preference handling loop.

	* src/utils.c, src/utils.h (is_client_present): Remove function.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (comm_send_status): Take socket instead of globals as
	argument.