@@ -1,5 +1,11 @@
 2015-04-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	Post branch version bump.
+
+	* CMakeLists.txt: Set to version to 5.1.0 and beta status.
+
+2015-04-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	Post release version bump.
 
 	* CMakeLists.txt: Set version to 5.0.2.
